--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,11 +47,11 @@
     <string name="address_in_after_life">Address in Afterlife</string>
     <string name="searching">Searching</string>
     <string name="coffee_shop_name">Coffee Shop Name</string>
-    <string name="intro">Donona là một chiếc app đáng yêu được phát triển bởi nhóm sinh viên năm cuối đang trong giai đoạn thực hiện môn Khởi nghiệp(EXE201) tại trường đại học FPT.Ứng dụng cho phép người dùng có thể tìm kiếm quán cafe ở gần vị trí hiện tại sử dung VietMap Người dùng có thể đăng nhập bằng Google, và nhiều tính năng khác</string>
+    <string name="intro">Donona is a lovely app developed by a group of final-year students who are in the process of completing the Entrepreneurship course (EXE201) at FPT University. The application allows users to search for coffee shops near their current location using VietMap. Users can log in with Google and enjoy many other features.</string>
     <string name="insta_id">donona.urcafeurway</string>
     <string name="gmail">donona.urcafeurway@gmail.com</string>
     <string name="contact">Contact</string>
     <string name="app_info">Appliance Infomation</string>
-
+    <string name="switch_lang">Switch Language</string>
 
 </resources>
