home switch lang

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -55,6 +55,14 @@
     <string name="app_info">Thông tin ứng dụng</string>
     <string name="switch_lang">Chuyển đổi ngôn ngữ</string>
     <string name="book_mark">Đánh Dấu</string>
+    <string name="near_me_ps">Gần đây</string>
+    <string name="map_ps">Map</string>
+    <string name="upgrade_ps">Nâng cấp</string>
+    <string name="book_mark_ps">Đánh dấu</string>
+    <string name="blog_ps">Bài viết</string>
+    <string name="promotion_ps">Giảm giá</string>
+    <string name="suggest_ps">Gợi ý</string>
+    <string name="game_ps">Trò chơi</string>
 
 
 </resources>
