Fix subscription price

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,13 +38,13 @@
     <string name="free_tier">Free Tier</string>
     <string name="basic">Basic</string>
     <string name="basic_features">Searching store \n Rating \n Bookmark \n Arcade game</string>
-    <string name="standard_price">5.000VND</string>
+    <string name="standard_price">10.000VND</string>
     <string name="standard">Standard</string>
     <string name="standard_features">Searching store Pro \n Rating Pro \n Bookmark Pro \n Arcade game Pro \n No ads Pro</string>
     <string name="buy_standard">Buy Standard</string>
     <string name="checkout">Check Out</string>
     <string name="hello_world">Hello world</string>
-    <string name="address_in_after_life">Address in Afterlife</string>
+    <string name="address_in_after_life">Placeholder</string>
     <string name="searching">Searching</string>
     <string name="coffee_shop_name">Coffee Shop Name</string>
     <string name="intro">Donona is a lovely app developed by a group of final-year students who are in the process of completing the Entrepreneurship course (EXE201) at FPT University. The application allows users to search for coffee shops near their current location using VietMap. Users can log in with Google and enjoy many other features.</string>
