--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -39,13 +39,13 @@
     <string name="free_tier">Cấp miễn phí</string>
     <string name="basic">Cơ bản</string>
     <string name="basic_features">Tìm kiếm cửa hàng \n Đánh giá \n Đánh dấu \n Trò chơi arcade</string>
-    <string name="standard_price">5.000 VND</string>
+    <string name="standard_price">10.000 VND</string>
     <string name="standard">Tiêu chuẩn</string>
     <string name="standard_features">Tìm kiếm cửa hàng Pro \n Đánh giá Pro \n Đánh dấu Pro \n Trò chơi arcade Pro \n Không quảng cáo Pro</string>
     <string name="buy_standard">Mua Tiêu chuẩn</string>
     <string name="checkout">Thanh toán</string>
     <string name="hello_world">Xin chào thế giới</string>
-    <string name="address_in_after_life">Địa chỉ trong kiếp sau</string>
+    <string name="address_in_after_life">Placeholder</string>
     <string name="searching">Đang tìm kiếm</string>
     <string name="coffee_shop_name">Tên quán cà phê</string>
     <string name="intro">Donona là một ứng dụng đáng yêu được phát triển bởi một nhóm sinh viên năm cuối đang trong quá trình hoàn thành môn Khởi nghiệp (EXE201) tại trường đại học FPT. Ứng dụng cho phép người dùng tìm kiếm các quán cà phê gần vị trí hiện tại của họ sử dụng VietMap. Người dùng có thể đăng nhập bằng Google và tận hưởng nhiều tính năng khác.</string>
