Update subscription UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,10 +37,10 @@
     <string name="upgrade_your_account">Upgrade Your Account</string>
     <string name="free_tier">Free Tier</string>
     <string name="basic">Basic</string>
-    <string name="basic_features">Searching store \n Rating \n Bookmark \n Arcade game</string>
+    <string name="basic_features">Unlimited Store Search \n Arcade game</string>
     <string name="standard_price">10.000VND</string>
     <string name="standard">Standard</string>
-    <string name="standard_features">Searching store Pro \n Rating Pro \n Bookmark Pro \n Arcade game Pro \n No ads Pro</string>
+    <string name="standard_features">Bookmark Store \n Read Blog \n Change Map Icon </string>
     <string name="buy_standard">Buy Standard</string>
     <string name="checkout">Check Out</string>
     <string name="hello_world">Hello world</string>
@@ -54,5 +54,7 @@
     <string name="app_info">Appliance Infomation</string>
     <string name="switch_lang">Switch Language</string>
     <string name="book_mark">Book Mark</string>
+    <string name="loading">Loading …</string>
+    <string name="cancel">Cancel subscription</string>
 
 </resources>
