--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -38,10 +38,10 @@
     <string name="upgrade_your_account">Nâng cấp tài khoản của bạn</string>
     <string name="free_tier">Cấp miễn phí</string>
     <string name="basic">Cơ bản</string>
-    <string name="basic_features">Tìm kiếm cửa hàng \n Đánh giá \n Đánh dấu \n Trò chơi arcade</string>
+    <string name="basic_features">Tìm kiếm cửa hàng không giới hạn \n Trò chơi arcade</string>
     <string name="standard_price">10.000 VND</string>
     <string name="standard">Tiêu chuẩn</string>
-    <string name="standard_features">Tìm kiếm cửa hàng Pro \n Đánh giá Pro \n Đánh dấu Pro \n Trò chơi arcade Pro \n Không quảng cáo Pro</string>
+    <string name="standard_features">Đánh dấu địa điểm \n Đọc Blog \n Thay Map Icon</string>
     <string name="buy_standard">Mua Tiêu chuẩn</string>
     <string name="checkout">Thanh toán</string>
     <string name="hello_world">Xin chào thế giới</string>
@@ -55,6 +55,7 @@
     <string name="app_info">Thông tin ứng dụng</string>
     <string name="switch_lang">Chuyển đổi ngôn ngữ</string>
     <string name="book_mark">Đánh Dấu</string>
-
+    <string name="loading">Đang tải …</string>
+    <string name="cancel">Huỷ đăng kí</string>
 
 </resources>
