--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="app_info">Appliance Infomation</string>
     <string name="switch_lang">Switch Language</string>
     <string name="book_mark">Book Mark</string>
-    <string name="near_me_ps">Book Mark</string>
+    <string name="near_me_ps">Near Me</string>
     <string name="map_ps">Map</string>
     <string name="upgrade_ps">Upgrade</string>
     <string name="book_mark_ps">Book Mark</string>
