--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -56,7 +56,7 @@
     <string name="switch_lang">Chuyển đổi ngôn ngữ</string>
     <string name="book_mark">Đánh Dấu</string>
     <string name="near_me_ps">Gần đây</string>
-    <string name="map_ps">Map</string>
+    <string name="map_ps">Bản Đồ</string>
     <string name="upgrade_ps">Nâng cấp</string>
     <string name="book_mark_ps">Đánh dấu</string>
     <string name="blog_ps">Bài viết</string>
