Fix bugs from sos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,9 @@
     <string name="promotion_ps">Promotion</string>
     <string name="suggest_ps">Suggest</string>
     <string name="game_ps">Game</string>
+    <string name="used_email">Email already in used</string>
+    <string name="tier">Tier</string>
+    <string name="no_update">No update</string>
 
 
 
