fix UI map's info

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -44,7 +44,7 @@
     <string name="standard_features">Đánh dấu địa điểm \n Đọc Blog \n Thay Map Icon</string>
     <string name="buy_standard">Mua Tiêu chuẩn</string>
     <string name="checkout">Thanh toán</string>
-    <string name="hello_world">Xin chào thế giới</string>
+    <string name="hello_world">Tên Quán Cà Phê</string>
     <string name="address_in_after_life">Placeholder</string>
     <string name="searching">Đang tìm kiếm</string>
     <string name="coffee_shop_name">Tên quán cà phê</string>
