--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="standard_features">Bookmark Store \nRead Blog \nChange Map Icon </string>
     <string name="buy_standard">Buy standard</string>
     <string name="checkout">Check Out</string>
-    <string name="hello_world">Hello world</string>
+    <string name="hello_world">Coffee Name</string>
     <string name="address_in_after_life">Placeholder</string>
     <string name="searching">Searching</string>
     <string name="coffee_shop_name">Coffee Shop Name</string>
